EqualizeHist for even out lighitng

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Emotion Detection</h1>
-    <p>Possible emotions: <strong>neutral, happiness, surprise</strong></p>
+    <p>Possible emotions: <strong>neutral, happiness, surprise, sadness</strong></p>
   </header>
 
   <div class="video-wrapper">
